--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
 Django==5.1.3
+django-cors-headers==4.6.0
 idna==3.10
 pyTelegramBotAPI==4.23.0
 requests==2.32.3
