--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,24 @@
+annotated-types==0.7.0
+anyio==4.6.2.post1
 asgiref==3.8.1
 certifi==2024.8.30
 charset-normalizer==3.4.0
+distro==1.9.0
 Django==5.1.3
 django-cors-headers==4.6.0
+h11==0.14.0
+httpcore==1.0.7
+httpx==0.27.2
 idna==3.10
+jiter==0.7.1
+openai==1.55.0
+pydantic==2.10.1
+pydantic_core==2.27.1
+pydub==0.25.1
 pyTelegramBotAPI==4.23.0
 requests==2.32.3
+sniffio==1.3.1
 sqlparse==0.5.1
+tqdm==4.67.1
+typing_extensions==4.12.2
 urllib3==2.2.3
